--- a/package.json
+++ b/package.json
@@ -4,14 +4,70 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tp": "wireit",
+    "ts": "wireit",
+    "build": "wireit",
+    "bundle": "wireit",
+    "generate": "wireit",
+    "prepare": "ts-patch install"
+  },
+  "wireit": {
+    "ts": {
+      "command": "npx tsc --build --pretty",
+      "clean": "if-file-deleted",
+      "files": [
+        "src/**/*.ts",
+        "tsconfig.json"
+      ],
+      "output": [
+        "dist/**",
+        ".tsbuildinfo"
+      ]
+    },
+    "tp": {
+      "command": "npx typia generate --input src/template --output src/generated --project tsconfig.json",
+      "clean": "if-file-deleted",
+      "files": [
+        "src/template/**/*.ts",
+        "tsconfig.json"
+      ],
+      "output": [
+        "src/generated/"
+      ]
+    },
+    "build": {
+      "command": "pnpm ts",
+      "dependencies": [
+        "tp"
+      ],
+      "clean": "if-file-deleted"
+    },
+    "bundle": {
+      "command": "pnpm build",
+      "dependencies": [
+        "generate"
+      ]
+    },
+    "generate": {
+      "command": "node dist/generated/main.js"
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "typia": "^3.8.4"
+  },
   "devDependencies": {
-    "extract-md-data": "^2.0.6"
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "extract-md-data": "^2.0.6",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^2.1.0",
+    "typescript": "^4.9.5",
+    "wireit": "^0.9.5"
   },
   "type": "module"
 }
