--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 14  # Mude para a versão do Node.js que você está usando
+        node-version: 18  # Mude para a versão do Node.js que você está usando
 
     - name: Install dependencies
-      run: npm install  # Ou use yarn se preferir
+      run: pnpm install  # Ou use yarn se preferir
 
     - name: Run Node.js script
       run: node dist/main.js # Substitua 'seu-arquivo-node.js' pelo nome do seu arquivo Node.js
