--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,12 @@ jobs:
 
     - name: Run Node.js script
       run: node dist/main.js # Substitua 'seu-arquivo-node.js' pelo nome do seu arquivo Node.js
+    
+    - name: Push to Different Branch
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git checkout -b nome-da-sua-branch-destino
+        git add .
+        git commit -m "Automated commit"
+        git push origin nome-da-sua-branch-destino
