--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
         git checkout -b nome-da-sua-branch-destino
         git add .
         git commit -m "Automated commit"
-        git remote add origin_with_token https://${{ secrets.BLOG_SAP }}@github.com/seu-usuario/seu-repositorio.git
+        git remote add origin_with_token https://${{ secrets.BLOG_SAP }}@github.com/realfakenerd/blog.git
         git push origin_with_token nome-da-sua-branch-destino
     
