--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
     
     - name: Push to Different Branch
       run: |
-        git config user.name "${{env.CI_COMMIT_AUTHOR}}""
+        git config user.name "${{env.CI_COMMIT_AUTHOR}}"
         git config user.email "username@users.noreply.github.com"
         git checkout -b blog
         git add .
