--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,6 @@ jobs:
     
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
+        token: ${{secrets.BLOG_SAP}}
         commit_message: "Automated Commit"
         branch: blog
