--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        token: ${{secrets.BLOG_SAP}}
 
     - uses: pnpm/action-setup@v2
       with:
@@ -34,6 +36,5 @@ jobs:
     
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        token: ${{secrets.BLOG_SAP}}
         commit_message: "Automated Commit"
         branch: blog
